testdata/baselines/reference/compiler/definiteAssignmentAssertionInDeclarationExtended.errors.txt
definiteAssignmentAssertionInDeclarationExtended.ts(7,18): error TS1255: A definite assignment assertion '!' is not permitted in this context.


==== definiteAssignmentAssertionInDeclarationExtended.ts (1 errors) ====
    export class DbObject {
        id!: string;
        name?: string;
        count: number = 0;
        private secret!: string;
        protected value!: number;
        static config!: boolean;
                     ~
!!! error TS1255: A definite assignment assertion '!' is not permitted in this context.
    }
    
    export interface IConfig {
        setting?: boolean; 
        optionalSetting?: string;
    }